<resources>
    <string name="app_name">Expense Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_a_user_please">Already a user? Please</string>
    <string name="login">login</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="login_text">Login</string>
    <string name="enter_your_password_text">Enter your Password</string>
    <string name="register">register</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="guest_user">Guest User</string>
    <string name="this_month">This month</string>
    <string name="rs_00">Rs 00</string>
    <string-array name="transaction_type">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
</resources>