<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:orientation="horizontal"
    tools:context=".AuthFragments.LoginFragment">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Please sign in to continue."
        android:textFontWeight="300"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/enter_your_e_mail"
        android:outlineAmbientShadowColor="@color/whitenum"
        android:textColorHint="@color/edittextcolorstatelist"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
        app:startIconTint="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="Password"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:startIconTint="@color/black"
        android:textColorHint="@color/edittextcolorstatelist"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_custom"
        android:paddingLeft="20dp"
        android:text="Login"
        android:textColor="@color/whitenum"
        android:textSize="30dp"
        app:backgroundTint="@null"
        app:elevation="3dp"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:iconGravity="end"
        app:iconSize="35dp"
        app:iconTint="@color/whitenum"
        app:layout_constraintBottom_toTopOf="@+id/registerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.233"
        app:strokeColor="@color/yellow" />

    <TextView
        android:id="@+id/alreadyUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:textColor="@color/black"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="36dp"
        android:text="Sign Up"
        android:textColor="@color/orange"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        style="@android:style/Widget.ProgressBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="39dp"-->
<!--        android:layout_marginBottom="56dp"-->
<!--        android:indeterminate="true"-->
<!--        android:indeterminateDrawable="@drawable/progress_bg"-->
<!--        android:progress="60"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/alreadyUserTextView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.473"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        style="@style/Widget.App.CircularProgressIndicator"
        app:layout_constraintBottom_toTopOf="@+id/alreadyUserTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>